--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
         </section>
         <section>
           <label for="index-input">Remove an index from your todo list! (Counting from zero because coding.)</label>
-          <input class="index-input "type="text" name="index-input">
+          <input class="index-input " type="text" name="index-input">
           <button class="remove-todo">REMOVE</button>
         </section>
-      <ul class="todo-list"></ul>
+        <section>
+          <button class="delete-all">Delete All</button>
+        </section>
+      <ol class="todo-list"></ol>
     </div>
-    <script src = "./removeTodo.js"></script>
-    <script src = "./addTodo.js"></script>
+    <script src = "./main.js"></script>
   </body>
 </html>
